--- a/index.html
+++ b/index.html
@@ -3,40 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Expenses chart component</title>
 
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <title>Expenses chart component</title>
 </head>
 <body>
+  <main class="main_content">
 
-  My balance
-  $921.48
+    <section class="my_balance">
 
-  Spending - Last 7 days
+      <div class="content">
+        <h1 class="text_balance">My balance</h1>
+        <p class="value_balance">$921.48</p>
+      </div>
 
-  mon
-  tue
-  wed
-  thu
-  fri
-  sat
-  sun
+      <div class="logo">
+        <img src="./images/logo.svg" alt="Logo">
+      </div>
 
-  Total this month
-  $478.33
+    </section>
 
-  +2.4%
-  from last month
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    <section class="spending_calendar">
+      <h2 class="spending_title">Spending - Last 7 days</h2>
+
+      <div class="calendar"></div>
+
+      <div class="total">
+
+        <div class="total_value">
+          <p class="medium_brown">Total this month</p>
+          <p class="value">$0.00</p>
+        </div>
+
+        <div class="last_month">
+          <p class="percent">+2.4%</p>
+          <p class="text medium_brown">from last month</p>
+        </div>
+
+      </div>
+
+    </section>
+  </main>
+
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Diego Ferreira</a>.
+  </footer>
+
+  <script src="./assets/js/main.js"></script>
 </body>
 </html>
