--- a/index.html
+++ b/index.html
@@ -1,57 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Expenses chart component</title>
+  </head>
+  <body>
+    <div id="app">
+      <main class="main_content">
 
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+        <section class="my_balance">
 
-  <title>Expenses chart component</title>
-</head>
-<body>
-  <main class="main_content">
+          <div class="content">
+            <h1 class="text_balance">My balance</h1>
+            <p class="value_balance">$921.48</p>
+          </div>
 
-    <section class="my_balance">
+          <div class="logo">
+            <img src="./images/logo.svg" alt="Logo">
+          </div>
 
-      <div class="content">
-        <h1 class="text_balance">My balance</h1>
-        <p class="value_balance">$921.48</p>
-      </div>
+        </section>
 
-      <div class="logo">
-        <img src="./images/logo.svg" alt="Logo">
-      </div>
+        <section class="spending_calendar">
+          <h2 class="spending_title">Spending - Last 7 days</h2>
 
-    </section>
+          <div class="calendar"></div>
 
-    <section class="spending_calendar">
-      <h2 class="spending_title">Spending - Last 7 days</h2>
+          <div class="total">
 
-      <div class="calendar"></div>
+            <div class="total_value">
+              <p class="medium_brown">Total this month</p>
+              <p class="value">$0.00</p>
+            </div>
 
-      <div class="total">
+            <div class="last_month">
+              <p class="percent">+2.4%</p>
+              <p class="text medium_brown">from last month</p>
+            </div>
 
-        <div class="total_value">
-          <p class="medium_brown">Total this month</p>
-          <p class="value">$0.00</p>
-        </div>
+          </div>
 
-        <div class="last_month">
-          <p class="percent">+2.4%</p>
-          <p class="text medium_brown">from last month</p>
-        </div>
+        </section>
+      </main>
 
-      </div>
-
-    </section>
-  </main>
-
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Diego Ferreira</a>.
-  </footer>
-
-  <script src="./assets/js/main.js"></script>
-</body>
+      <footer class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Diego Ferreira</a>.
+      </footer>
+    </div>
+    <script type="module" src="./assets/js/main.js"></script>
+  </body>
 </html>
